<resources>
    <string name="app_name">hellobeacon2019</string>
    <string name="start_scan">START SCAN</string>
    <string name="enter_scan_interval_here">Enter Scan Interval here</string>
    <string name="input">Input</string>
    <string name="stop_scan">STOP SCAN</string>
    <string name="collected_beacons_neighbours">Collected Beacons(neighbours)</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="button">Button</string>
</resources>
