<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/startscanbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="154dp"
        android:onClick="startServiceByButtonClick"
        android:text="@string/start_scan" />

    <Button
        android:id="@+id/stopscanbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="57dp"
        android:text="@string/stop_scan" />

    <EditText
        android:id="@+id/InputIntervalField"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="167dp"
        android:layout_height="31dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/enter_scan_interval_here"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:text="@string/collected_beacons_neighbours"
        android:textAlignment="center"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="354dp"
        android:layout_height="363dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scanned_uuid_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="UUID"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/scanned_major_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Major"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/scanned_minor_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Minor"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/scanned_major_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Major"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/scanned_minor_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Minor"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/scanned_uuid_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="UUID"
            android:textAlignment="center" />
    </LinearLayout>

</RelativeLayout>